--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.6",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
