--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -28,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-config": "^1.5.1",
+    "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6"
