--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font"
+      "expo-font",
+      "expo-camera"
     ],
     "experiments": {
       "typedRoutes": true
