--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-dev-client": "~4.0.14",
+    "expo-camera": "~15.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
